--- a/TcsInsurance/VirtuClient/VirtuClient.csproj
+++ b/TcsInsurance/VirtuClient/VirtuClient.csproj
@@ -49,11 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\GetClassifierResult.cs" />
+    <Compile Include="Models\GetClassifierOutput.cs" />
+    <Compile Include="Models\GetTariffResult.cs" />
+    <Compile Include="Models\GetTariffOutput.cs" />
+    <Compile Include="Models\GetTariffValueOutput.cs" />
     <Compile Include="VirtuMapper.cs" />
     <Compile Include="Models\AuthenticationInputParams.cs" />
     <Compile Include="Models\AuthenticationResult.cs" />
     <Compile Include="Models\Core\VirtuException.cs" />
-    <Compile Include="Models\GetProductsResult.cs" />
+    <Compile Include="Models\GetProductResult.cs" />
     <Compile Include="Models\GetProductOutput.cs" />
     <Compile Include="Models\Core\IVirtuResult.cs" />
     <Compile Include="Models\Core\VirtuResponceException.cs" />
