--- a/TcsInsurance/TcsInsurance/packages.config
+++ b/TcsInsurance/TcsInsurance/packages.config
@@ -10,7 +10,9 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="NPOI" version="2.3.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
 </packages>
