--- a/TcsInsurance/TcsInsurance/TcsInsurance.csproj
+++ b/TcsInsurance/TcsInsurance/TcsInsurance.csproj
@@ -133,6 +133,12 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Entities\Model.cs" />
     <Compile Include="Entities\TickerHistoryValue.cs" />
+    <Compile Include="Helpers\Excel\CellHelper.cs" />
+    <Compile Include="Helpers\DatabaseExtensions.cs" />
+    <Compile Include="Helpers\Excel\ExcelParseInvalidOperationException.cs" />
+    <Compile Include="Helpers\Excel\ParserHelper.cs" />
+    <Compile Include="Helpers\Range.cs" />
+    <Compile Include="Helpers\TickerHistoryHelper.cs" />
     <Compile Include="Models\GetProductsInputParam.cs" />
     <Compile Include="Models\GetProductsOutputParam.cs" />
     <Compile Include="Models\InvestParam.cs" />
