--- a/TcsInsurance/VirtuClient/VirtuClient.csproj
+++ b/TcsInsurance/VirtuClient/VirtuClient.csproj
@@ -53,11 +53,14 @@
     <Compile Include="Models\GetPrintformsResult.cs" />
     <Compile Include="Models\GetClassifierResult.cs" />
     <Compile Include="Models\GetClassifierOutput.cs" />
+    <Compile Include="Models\StrategiesSearchOutput.cs" />
+    <Compile Include="Models\StrategiesSearchResult.cs" />
+    <Compile Include="Models\StrategiesSearchInput.cs" />
     <Compile Include="Models\GetTariffResult.cs" />
     <Compile Include="Models\GetTariffOutput.cs" />
     <Compile Include="Models\Policy.cs" />
     <Compile Include="VirtuMapper.cs" />
-    <Compile Include="Models\AuthenticationInputParams.cs" />
+    <Compile Include="Models\AuthenticationInput.cs" />
     <Compile Include="Models\AuthenticationResult.cs" />
     <Compile Include="Models\Core\VirtuException.cs" />
     <Compile Include="Models\GetProductResult.cs" />
