--- a/TcsInsurance/TinkoffClient/TinkoffClient.csproj
+++ b/TcsInsurance/TinkoffClient/TinkoffClient.csproj
@@ -40,14 +40,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Currency.cs" />
+    <Compile Include="Models\GetPolicyResponse.cs" />
+    <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\AddressType.cs" />
+    <Compile Include="Models\Beneficiary.cs" />
+    <Compile Include="Models\CreatePolicyRequest.cs" />
+    <Compile Include="Models\CreatePolicyResponse.cs" />
+    <Compile Include="Models\CurrencyType.cs" />
+    <Compile Include="Models\Document.cs" />
     <Compile Include="Models\GetProductsResponse.cs" />
     <Compile Include="Models\InvestParam.cs" />
+    <Compile Include="Models\RedemptionAmountInfo.cs" />
+    <Compile Include="Models\PaymentsPlanItem.cs" />
     <Compile Include="Models\Periodicity.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Models\PolicyTerm.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\RedemptionAmount.cs" />
+    <Compile Include="Models\RelationType.cs" />
     <Compile Include="Models\Risk.cs" />
+    <Compile Include="Models\SexType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinkoffClient.cs" />
   </ItemGroup>
