--- a/TcsInsurance/TcsInsurance/Web.config
+++ b/TcsInsurance/TcsInsurance/Web.config
@@ -85,4 +85,8 @@
   <connectionStrings>
     <add name="TinkoffInsuranceModel" connectionString="data source=.;initial catalog=TinkoffUralbibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
 </configuration>
