--- a/TcsInsurance/TcsInsurance/Web.config
+++ b/TcsInsurance/TcsInsurance/Web.config
@@ -83,7 +83,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TinkoffInsuranceModel" connectionString="data source=.;initial catalog=TinkoffUralbibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model" connectionString="data source=.;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings />
