+ prod publish profile

--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -49,6 +49,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model" connectionString="data source=.;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
