--- a/TcsInsurance/TcsInsurance/Web.config
+++ b/TcsInsurance/TcsInsurance/Web.config
@@ -77,7 +77,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings />
