--- a/TcsInsurance/TcsInsurance/Web.config
+++ b/TcsInsurance/TcsInsurance/Web.config
@@ -77,11 +77,21 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="Model" connectionString="data source=.;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
-    <bindings />
-    <client />
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_InvestingInsuranceInterface" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:53175/Insurance.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_InvestingInsuranceInterface"
+        contract="TinkoffInsuranceServiceReference.InvestingInsuranceInterface"
+        name="BasicHttpBinding_InvestingInsuranceInterface" />
+    </client>
   </system.serviceModel>
   <system.codedom>
     <compilers>
