--- a/TcsInsurance/TcsInsurance/TcsInsurance.csproj
+++ b/TcsInsurance/TcsInsurance/TcsInsurance.csproj
@@ -127,6 +127,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.disco" />
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -134,6 +141,29 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.wsdl" />
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance1.wsdl" />
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.AcceptPolicyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.CreatePolicyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetPolicyDocumentResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetPolicyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetQuotesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.product.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\prod.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -144,7 +174,13 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Connected Services\TinkoffInsuranceServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Entities\Log.cs" />
     <Compile Include="Entities\Model.cs" />
     <Compile Include="Entities\Setting.cs" />
@@ -181,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Test\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinkoffClient\TinkoffClient.csproj">
@@ -194,6 +231,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\TinkoffInsuranceServiceReference\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
