--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -48,11 +48,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--<system.net>
+  <system.net>
     <defaultProxy useDefaultCredentials="true">
       <proxy proxyaddress="http://msk01-wsncls02.uralsibins.ru:8080" usesystemdefault="True" />
     </defaultProxy>
-  </system.net>-->
+  </system.net>
   <connectionStrings>
     <!--<add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="Model" connectionString="data source=.;initial catalog=TinkoffUralsibLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
