--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -15,6 +15,16 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WSPortBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://185.98.80.21:8080/ws.udsj/WSService"
+        binding="basicHttpBinding" bindingConfiguration="WSPortBinding"
+        contract="TickerServiceReference.WS" name="WSPort" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior>
