--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -15,6 +15,21 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WSPortBinding">
+            <security mode="Transport">
+                <transport clientCredentialType="Basic" />
+            </security>
+        </binding>
+        <binding name="WSPortBinding1" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://msk01-lfeapp03:8181/ws.udsj/WSService"
+        binding="basicHttpBinding" bindingConfiguration="WSPortBinding"
+        contract="TikerHistoryServiceReference.WS" name="WSPort" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior>
