--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -17,7 +17,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="WSPortBinding">
+        <binding name="WSPortBinding" maxReceivedMessageSize="20000000" maxBufferSize="20000000" maxBufferPoolSize="20000000">
             <security mode="Transport">
                 <transport clientCredentialType="Basic" />
             </security>
