* LoadFromService * update Newtonsoft.Json - NPOI - excel loading + wsUserName & wsPassword settings

--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -9,6 +9,8 @@
     <add key="virtuBaseUrl" value="https://uralsiblife.virtusystems.ru" />
     <add key="virtuUserName" value="Tinkoff" />
     <add key="virtuPassword" value="L5pBd4TD24" />
+    <add key="wsUserName" value="tinkoff_svc" />
+    <add key="wsPassword" value="tinkoff_svc_12345" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
