--- a/TcsInsurance/TcsInsurance/Web.config
+++ b/TcsInsurance/TcsInsurance/Web.config
@@ -80,17 +80,8 @@
     <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_InvestingInsuranceInterface" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://localhost:53175/Insurance.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_InvestingInsuranceInterface"
-        contract="TinkoffInsuranceServiceReference.InvestingInsuranceInterface"
-        name="BasicHttpBinding_InvestingInsuranceInterface" />
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
   <system.codedom>
     <compilers>
