--- a/TcsInsurance/TcsInsurance/TcsInsurance.csproj
+++ b/TcsInsurance/TcsInsurance/TcsInsurance.csproj
@@ -127,13 +127,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.disco" />
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\configuration91.svcinfo" />
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\configuration.svcinfo" />
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -141,74 +134,42 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.wsdl" />
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\TinkoffInsuranceServiceReference\Insurance1.wsdl" />
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.AcceptPolicyResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.CreatePolicyResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetPolicyDocumentResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetPolicyResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.GetQuotesResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
-    <Content Include="Connected Services\TinkoffInsuranceServiceReference\TcsInsurance.TinkoffInsuranceServiceReference.product.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
     <None Include="Properties\PublishProfiles\prod.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Connected Services\TinkoffInsuranceServiceReference\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Entities\Log.cs" />
     <Compile Include="Entities\Model.cs" />
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\TickerHistoryValue.cs" />
-    <Compile Include="Helpers\Excel\CellHelper.cs" />
-    <Compile Include="Helpers\DatabaseExtensions.cs" />
-    <Compile Include="Helpers\Excel\ExcelParseInvalidOperationException.cs" />
-    <Compile Include="Helpers\Excel\ParserHelper.cs" />
-    <Compile Include="Helpers\QuotesHelper.cs" />
-    <Compile Include="Helpers\Range.cs" />
-    <Compile Include="Helpers\TickerHistoryHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\UploadViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -218,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinkoffClient\TinkoffClient.csproj">
@@ -231,9 +193,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\TinkoffInsuranceServiceReference\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
