* Action = "" * debug="true" don't working with DispatchByBodyBehaviorAttribute (https://stackoverflow.com/a/11170390)

--- a/TcsInsurance/TinkoffClient/TinkoffClient.csproj
+++ b/TcsInsurance/TinkoffClient/TinkoffClient.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DispatchByBodyBehaviorAttribute.cs" />
+    <Compile Include="DispatchByBodyOperationSelector.cs" />
     <Compile Include="Models\Models.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinkoffClient.cs" />
