--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -13,7 +13,7 @@
     <add key="wsPassword" value="tinkoff_svc_12345" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="false" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
