--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -19,18 +19,23 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="WSPortBinding" maxReceivedMessageSize="20000000" maxBufferSize="20000000" maxBufferPoolSize="20000000">
-            <security mode="Transport">
-                <transport clientCredentialType="Basic" />
-            </security>
+        <binding name="WSPortBinding" maxBufferPoolSize="20000000" maxBufferSize="20000000"
+          maxReceivedMessageSize="20000000">
+          <security mode="Transport">
+            <transport clientCredentialType="Basic" />
+          </security>
         </binding>
         <binding name="WSPortBinding1" />
+        <binding name="DailyInfoSoap" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://msk01-lfeapp03:8181/ws.udsj/WSService"
         binding="basicHttpBinding" bindingConfiguration="WSPortBinding"
         contract="TikerHistoryServiceReference.WS" name="WSPort" />
+      <endpoint address="http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="DailyInfoSoap"
+        contract="CbrServiceReference.DailyInfoSoap" name="DailyInfoSoap" />
     </client>
     <behaviors>
       <serviceBehaviors>
