--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -1,81 +1,76 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="virtuBaseUrl" value="https://uralsiblife.virtusystems.ru" />
-    <add key="virtuUserName" value="Tinkoff" />
-    <add key="virtuPassword" value="L5pBd4TD24" />
-    <add key="wsUserName" value="tinkoff_svc" />
-    <add key="wsPassword" value="tinkoff_svc_12345" />
-  </appSettings>
-  <system.web>
-    <compilation debug="false" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
-  </system.web>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="WSPortBinding" maxBufferPoolSize="20000000" maxBufferSize="20000000"
-          maxReceivedMessageSize="20000000">
-          <security mode="Transport">
-            <transport clientCredentialType="Basic" />
-          </security>
-        </binding>
-        <binding name="WSPortBinding1" />
-        <binding name="DailyInfoSoap" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://msk01-lfeapp03:8181/ws.udsj/WSService"
-        binding="basicHttpBinding" bindingConfiguration="WSPortBinding"
-        contract="TikerHistoryServiceReference.WS" name="WSPort" />
-      <endpoint address="http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx"
-        binding="basicHttpBinding" bindingConfiguration="DailyInfoSoap"
-        contract="CbrServiceReference.DailyInfoSoap" name="DailyInfoSoap" />
-    </client>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-    <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
-  </system.serviceModel>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
-    <!--
+	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+	</configSections>
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+		<add key="virtuBaseUrl" value="https://uralsiblife.virtusystems.ru"/>
+		<add key="virtuUserName" value="Tinkoff"/>
+		<add key="virtuPassword" value="L5pBd4TD24"/>
+		<add key="wsUserName" value="tinkoff_svc"/>
+		<add key="wsPassword" value="tinkoff_svc_12345"/>
+	</appSettings>
+	<system.web>
+		<compilation debug="true" targetFramework="4.5.2"/>
+		<httpRuntime targetFramework="4.5.2"/>
+	</system.web>
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="WSPortBinding" maxBufferPoolSize="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000">
+					<security mode="Transport">
+						<transport clientCredentialType="Basic"/>
+					</security>
+				</binding>
+				<binding name="WSPortBinding1"/>
+				<binding name="DailyInfoSoap"/>
+			</basicHttpBinding>
+		</bindings>
+		<client>
+			<endpoint address="https://msk01-lfeapp03:8181/ws.udsj/WSService" binding="basicHttpBinding" bindingConfiguration="WSPortBinding" contract="TikerHistoryServiceReference.WS" name="WSPort"/>
+			<endpoint address="http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx" binding="basicHttpBinding" bindingConfiguration="DailyInfoSoap" contract="CbrServiceReference.DailyInfoSoap" name="DailyInfoSoap"/>
+		</client>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- To avoid disclosing metadata information, set the values below to false before deployment -->
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+					<serviceDebug includeExceptionDetailInFaults="false"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+		<protocolMapping>
+			<add binding="basicHttpsBinding" scheme="https"/>
+		</protocolMapping>
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+	</system.serviceModel>
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true"/>
+		<!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true" />
-  </system.webServer>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-  <system.net>
-    <defaultProxy useDefaultCredentials="true">
-      <proxy proxyaddress="http://msk01-wsncls02.uralsibins.ru:8080" usesystemdefault="True" />
-    </defaultProxy>
-  </system.net>
-  <connectionStrings>
-    <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+		<directoryBrowse enabled="true"/>
+	</system.webServer>
+	<entityFramework>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+			<parameters>
+				<parameter value="mssqllocaldb"/>
+			</parameters>
+		</defaultConnectionFactory>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+		</providers>
+	</entityFramework>
+	<system.net>
+		<defaultProxy useDefaultCredentials="true">
+			<proxy proxyaddress="http://msk01-wsncls02.uralsibins.ru:8080" usesystemdefault="True"/>
+		</defaultProxy>
+	</system.net>
+	<connectionStrings>
+		<add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
